--- a/x11/ftmenu/Makefile
+++ b/x11/ftmenu/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.51 2024/12/27 08:20:53 wiz Exp $
+# $NetBSD: Makefile,v 1.52 2025/01/27 18:59:07 rillig Exp $
 #
 
 DISTNAME=	ftmenu-0.3
-
 PKGREVISION=	42
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=ftmenu/}
