--- a/x11/modeline/Makefile
+++ b/x11/modeline/Makefile
@@ -1,17 +1,17 @@
-# $NetBSD: Makefile,v 1.17 2020/08/24 06:30:58 tnn Exp $
+# $NetBSD: Makefile,v 1.18 2025/01/27 18:59:07 rillig Exp $
 
 DISTNAME=		modeline_vfr.c
 PKGNAME=		modeline-20060729
 PKGREVISION=		1
 CATEGORIES=		x11
 MASTER_SITES=		http://www.bohne-lang.de/spec/linux/modeline/
+DIST_SUBDIR=		${PKGNAME_NOREV}
 EXTRACT_SUFX=		# empty
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://www.bohne-lang.de/spec/linux/modeline/
 COMMENT=		Calculates XF86 Modelines to configure your monitor for X11R6
 
-DIST_SUBDIR=		${PKGNAME_NOREV}
 WRKSRC=			${WRKDIR}/modeline
 INSTALLATION_DIRS=	bin
 
