--- a/x11/swt/Makefile
+++ b/x11/swt/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.10 2024/12/27 08:21:04 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/27 18:59:08 rillig Exp $
 
 VERSION=	4.21
+DISTNAME=	swt-${VERSION}-gtk-linux-x86_64
 PKGNAME=	swt-${VERSION}
 PKGREVISION=	8
-DISTNAME=	swt-${VERSION}-gtk-linux-x86_64
 CATEGORIES=	x11 java graphics
 MASTER_SITES=	http://archive.eclipse.org/eclipse/downloads/drops4/R-${VERSION}-202109060500/
 EXTRACT_SUFX=	.zip
