--- a/x11/tinyx-wscons/Makefile
+++ b/x11/tinyx-wscons/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.10 2024/12/16 03:27:08 nat Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/27 18:59:08 rillig Exp $
 
 VERSION=	0.6
-GITHUB_PROJECT=	tinyx-wscons
 DISTNAME=	${GITHUB_PROJECT}-${VERSION}
-
 #PKGREVISION=	1
 CATEGORIES=	x11
+GITHUB_PROJECT=	tinyx-wscons
 MASTER_SITES=	${MASTER_SITE_GITHUB:=AceHusky12/}
 EXTRACT_SUFX=	.zip
 
