--- a/x11/tk-BWidget/Makefile
+++ b/x11/tk-BWidget/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2020/03/20 11:58:36 nia Exp $
+# $NetBSD: Makefile,v 1.16 2025/01/27 18:59:08 rillig Exp $
 
 DISTNAME=	BWidget-1.9.0
 PKGNAME=	tk-${DISTNAME}
@@ -9,7 +9,6 @@ MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=tcllib/}
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://tcllib.sourceforge.net/
 COMMENT=	High-level Widget Set for Tcl/Tk
-
 LICENSE=	mit
 
 DEPENDS+=	tcl>=8.4:../../lang/tcl
