--- a/x11/xview-clients/Makefile
+++ b/x11/xview-clients/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.41 2022/04/23 00:15:46 gutteridge Exp $
+# $NetBSD: Makefile,v 1.42 2025/01/27 18:59:09 rillig Exp $
 
 DISTNAME=		xview3.2p1-X11R6
 PKGNAME=		xview-clients-3.2.1
@@ -8,13 +8,13 @@ MASTER_SITES=		${MASTER_SITE_LOCAL}
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 COMMENT=		OpenLook applications and man pages
+LICENSE=		sun-openlook-license
 
 MAKE_JOBS_SAFE=		no
 
-BROKEN_ON_PLATFORM=	${LP64PLATFORMS}  # It builds but everything segfaults.
-
-LICENSE=		sun-openlook-license
 NO_SRC_ON_FTP=		Already in MASTER_SITE_LOCAL
+
+BROKEN_ON_PLATFORM=	${LP64PLATFORMS}  # It builds but everything segfaults.
 
 EXTRACT_ELEMENTS=	${DISTNAME}/clients ${DISTNAME}/images
 
