--- a/x11/xview-lib/Makefile
+++ b/x11/xview-lib/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.45 2022/04/23 00:15:46 gutteridge Exp $
+# $NetBSD: Makefile,v 1.46 2025/01/27 18:59:09 rillig Exp $
 
 DISTNAME=		xview3.2p1-X11R6
 PKGNAME=		xview-lib-3.2.1
@@ -8,6 +8,7 @@ MASTER_SITES=		${MASTER_SITE_LOCAL}
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 COMMENT=		OpenLook Toolkit libs, includes, and man pages
+LICENSE=		sun-openlook-license
 
 MAKE_JOBS_SAFE=		no
 
@@ -15,7 +16,6 @@ MAKE_JOBS_SAFE=		no
 DEPENDS+=		font-sun-misc>=1.0.3:../../fonts/font-sun-misc
 DEPENDS+=		xview-config>=3.2.1nb6:../../x11/xview-config
 
-LICENSE=		sun-openlook-license
 NO_SRC_ON_FTP=		Already in MASTER_SITE_LOCAL
 # Builds, but binaries in ../xview-clients all crash. Broken va_arg handling.
 BROKEN_ON_PLATFORM=	${LP64PLATFORMS}
