--- a/archivers/fcrackzip/Makefile
+++ b/archivers/fcrackzip/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.9 2023/12/17 16:27:36 zafer Exp $
+# $NetBSD: Makefile,v 1.10 2025/01/27 19:12:37 rillig Exp $
 
 DISTNAME=	fcrackzip-1.0
 PKGREVISION=	1
-MASTER_SITES=	http://oldhome.schmorp.de/marc/data/
 CATEGORIES=	archivers
+MASTER_SITES=	http://oldhome.schmorp.de/marc/data/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://software.schmorp.de/pkg/fcrackzip.html
