--- a/archivers/undms/Makefile
+++ b/archivers/undms/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.24 2016/01/23 03:37:31 zafer Exp $
+# $NetBSD: Makefile,v 1.25 2025/01/27 19:12:39 rillig Exp $
 
 DISTNAME=	undms-1.3.c
 PKGNAME=	undms-1.3
 CATEGORIES=	archivers
 MASTER_SITES=	ftp://ftp.fau.de/aminet/misc/unix/
-
 EXTRACT_SUFX=	.Z
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
