--- a/archivers/unlzx/Makefile
+++ b/archivers/unlzx/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.25 2016/01/23 03:35:22 zafer Exp $
+# $NetBSD: Makefile,v 1.26 2025/01/27 19:12:39 rillig Exp $
 
 DISTNAME=	unlzx.c
 PKGNAME=	unlzx-1.1
 CATEGORIES=	archivers
 MASTER_SITES=	ftp://ftp.fau.de/aminet/misc/unix/
-
 EXTRACT_SUFX=	.gz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
