--- a/audio/id3ren/Makefile
+++ b/audio/id3ren/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.1 2020/08/30 10:41:01 jmcneill Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/27 20:21:13 rillig Exp $
 
-GITHUB_PROJECT=	id3ren
-GITHUB_TAG=	b061aba2bfa25bcde732776262cc2a19d66b416a
 DISTNAME=	b061aba2bfa25bcde732776262cc2a19d66b416a
 PKGNAME=	${GITHUB_PROJECT}-0.0.20130521
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_GITHUB:=sebcode/}
+GITHUB_PROJECT=	id3ren
+GITHUB_TAG=	b061aba2bfa25bcde732776262cc2a19d66b416a
 DIST_SUBDIR=	${GITHUB_PROJECT}
 EXTRACT_SUFX=	.zip
 
