--- a/audio/mp3gain/Makefile
+++ b/audio/mp3gain/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.5 2020/05/16 18:04:05 nia Exp $
+# $NetBSD: Makefile,v 1.6 2025/01/27 20:21:14 rillig Exp $
 
-PKGNAME=		mp3gain-1.6.2
 DISTNAME=		${PKGNAME:S/./_/g}-src
+PKGNAME=		mp3gain-1.6.2
 CATEGORIES=		audio
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=mp3gain/}
 EXTRACT_SUFX=		.zip
@@ -9,10 +9,10 @@ EXTRACT_SUFX=		.zip
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://mp3gain.sourceforge.net/
 COMMENT=		Loudness normalizer for MP3 files
+LICENSE=		gnu-lgpl-v2
 
 WRKSRC=			${WRKDIR}
 USE_TOOLS+=		gmake
-LICENSE=		gnu-lgpl-v2
 
 do-install:
 	${INSTALL_PROGRAM_DIR} ${DESTDIR}${PREFIX}/bin
