--- a/benchmarks/xengine/Makefile
+++ b/benchmarks/xengine/Makefile
@@ -1,19 +1,17 @@
-# $NetBSD: Makefile,v 1.28 2021/04/21 09:15:34 wiz Exp $
+# $NetBSD: Makefile,v 1.29 2025/01/27 20:46:57 rillig Exp $
 
 DISTNAME=	xengine-1.0.1
 PKGREVISION=	4
 CATEGORIES=	benchmarks
 #MASTER_SITES=	ftp://ftp.42.org/pub/OLD/x/xengine/
+DIST_SUBDIR=	xengine
 DISTFILES=	part01.z patch1.z
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Reciprocating engine for X
 
 WRKSRC=			${WRKDIR}
-DIST_SUBDIR=		xengine
 USE_IMAKE=		yes
-PATCH_DIST_STRIP=	-p1
-
 USE_TOOLS+=	gzcat patch sed
 
 EXTRACT_CMD=	${GZCAT} $$extract_file | ${SED} "1,/\#!/d" | ${SH}
