--- a/benchmarks/kttcp/Makefile
+++ b/benchmarks/kttcp/Makefile
@@ -1,17 +1,17 @@
-# $NetBSD: Makefile,v 1.22 2015/01/01 09:14:31 dholland Exp $
+# $NetBSD: Makefile,v 1.23 2025/01/27 20:47:19 rillig Exp $
 
 DISTNAME=	kttcp-20020711
-CATEGORIES=	benchmarks net
 PKGREVISION=	2
+CATEGORIES=	benchmarks net
 MASTER_SITES=	# empty
 DISTFILES=	# empty
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Kernel network throughput benchmark
 
-ONLY_FOR_PLATFORM=	NetBSD-*-*
 NOT_FOR_PLATFORM=	NetBSD-1.[0-5]*-* \
 			NetBSD-1.6-* NetBSD-1.6.*-* NetBSD-1.6A-*
+ONLY_FOR_PLATFORM=	NetBSD-*-*
 
 USE_BSD_MAKEFILE=	yes
 WRKSRC=			${WRKDIR}
