--- a/textproc/p5-Text-Markdown-Discount/Makefile
+++ b/textproc/p5-Text-Markdown-Discount/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.30 2024/12/31 14:31:09 schmonz Exp $
+# $NetBSD: Makefile,v 1.31 2025/01/28 00:47:03 schmonz Exp $
 
-DISTNAME=		Text-Markdown-Discount-0.17
+DISTNAME=		Text-Markdown-Discount-0.18
 PKGNAME=		p5-${DISTNAME}
 CATEGORIES=		textproc perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Text/}
@@ -12,8 +12,10 @@ LICENSE=		${PERL5_LICENSE}
 
 PERL5_PACKLIST=		auto/Text/Markdown/Discount/.packlist
 
+PERL5_MODULE_TYPE=	Module::Build
+
 SUBST_CLASSES+=		paths
-SUBST_FILES.paths=	Makefile.PL
+SUBST_FILES.paths=	builder/MyBuilder.pm
 SUBST_VARS.paths=	PREFIX
 SUBST_STAGE.paths=	pre-configure
 
