--- a/x11/xfce4-clipman-plugin/Makefile
+++ b/x11/xfce4-clipman-plugin/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.78 2024/12/27 08:21:05 wiz Exp $
+# $NetBSD: Makefile,v 1.79 2025/01/28 00:59:09 gutteridge Exp $
 
-PKGREVISION= 5
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-VERSION=	1.6.6
+VERSION=	1.6.7
 DISTNAME=	xfce4-clipman-plugin-${VERSION}
 CATEGORIES=	x11
 MASTER_SITES=	https://archive.xfce.org/src/panel-plugins/xfce4-clipman-plugin/${VERSION:R}/
@@ -24,6 +23,7 @@ CONF_FILES=		${XFCE4_EGBASE}/autostart/xfce4-clipman-plugin-autostart.desktop \
 MAKE_DIRS+=	${XFCE4_EGBASE}/autostart \
 		${XFCE4_EGBASE}/panel
 
+.include "../../devel/gettext-tools/msgfmt-desktop.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../x11/xfce4-panel/buildlink3.mk"
