--- a/x11/xfce4-desktop/Makefile
+++ b/x11/xfce4-desktop/Makefile
@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.108 2024/12/29 19:13:07 bsiegert Exp $
+# $NetBSD: Makefile,v 1.109 2025/01/28 01:20:20 gutteridge Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 VERSION=	4.20.0
 DISTNAME=	xfdesktop-${VERSION}
 PKGNAME=	xfce4-desktop-${VERSION}
+PKGREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES+=	https://archive.xfce.org/src/xfce/xfdesktop/${VERSION:R}/
 
@@ -18,6 +19,7 @@ BUILD_DEFS+=		PKG_SYSCONFBASE
 
 CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFBASE}
 
+.include "../../devel/gettext-tools/msgfmt-desktop.mk"
 .include "../../devel/libwnck3/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
