--- a/meta-pkgs/xfce4/Makefile
+++ b/meta-pkgs/xfce4/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.151 2025/01/28 00:54:54 gutteridge Exp $
+# $NetBSD: Makefile,v 1.152 2025/01/28 01:21:55 gutteridge Exp $
 
 META_PACKAGE=	yes
 
@@ -11,7 +11,7 @@ COMMENT=	Meta-package for the Xfce desktop environment
 
 DEPENDS+=	xfce4-tumbler>=4.20.0:../../x11/xfce4-tumbler
 DEPENDS+=	xfce4-appfinder>=4.20.0:../../sysutils/xfce4-appfinder
-DEPENDS+=	xfce4-desktop>=4.20.0:../../x11/xfce4-desktop
+DEPENDS+=	xfce4-desktop>=4.20.0nb1:../../x11/xfce4-desktop
 DEPENDS+=	xfce4-mousepad>=0.6.3:../../editors/xfce4-mousepad
 DEPENDS+=	xfce4-panel>=4.20.0:../../x11/xfce4-panel
 DEPENDS+=	xfce4-power-manager>=4.20.0:../../sysutils/xfce4-power-manager
