--- a/textproc/py-markups/Makefile
+++ b/textproc/py-markups/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.18 2025/01/07 19:47:21 adam Exp $
+# $NetBSD: Makefile,v 1.19 2025/01/28 02:24:35 gutteridge Exp $
 
 DISTNAME=	markups-4.1.0
+PKGREVISION=	1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=M/Markups/}
@@ -12,17 +13,16 @@ LICENSE=	modified-bsd
 
 WHEEL_NAME=	${DISTNAME:S/m/M/}
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=61.2:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=70.1:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-markdown-math-[0-9]*:../../textproc/py-markdown-math
-# optional
 DEPENDS+=	${PYPKGPREFIX}-docutils-[0-9]*:../../textproc/py-docutils
+DEPENDS+=	${PYPKGPREFIX}-lxml-[0-9]*:../../textproc/py-lxml
 DEPENDS+=	${PYPKGPREFIX}-pygments-[0-9]*:../../textproc/py-pygments
 DEPENDS+=	${PYPKGPREFIX}-textile-[0-9]*:../../textproc/py-textile
-# As of 4.0.0, there is also asciidoc support, requiring textproc/asciidoc
-# and textproc/py-lxml. This hasn't been enabled, in part because asciidoc
-# (as packaged) doesn't seem intended to handle multiple Python versions.
-# textproc/py-yaml is also an optional dependency for configurations using
-# YAML.
+DEPENDS+=	${PYPKGPREFIX}-yaml-[0-9]*:../../textproc/py-yaml
+# As of 4.0.0, there is also asciidoc support, requiring textproc/asciidoc.
+# This hasn't been enabled here, because asciidoc (as packaged) doesn't
+# support installations of multiple Python versions.
 
 USE_LANGUAGES=	# none
 
