--- a/editors/retext/Makefile
+++ b/editors/retext/Makefile
@@ -1,15 +1,19 @@
-# $NetBSD: Makefile,v 1.22 2025/01/16 23:17:40 gutteridge Exp $
+# $NetBSD: Makefile,v 1.23 2025/01/28 02:31:38 gutteridge Exp $
 
 DISTNAME=	retext-8.1.0
+PKGREVISION=	1
 CATEGORIES=	editors python
 MASTER_SITES=	${MASTER_SITE_PYPI:=R/ReText/}
 
 MAINTAINER=	gutteridge@NetBSD.org
 HOMEPAGE=	https://github.com/retext-project/retext
-COMMENT=	Simple but powerful editor for Markdown and reStructuredText
+COMMENT=	Simple but powerful editor for various markup formats
 LICENSE=	gnu-gpl-v2
 
 DEPENDS+=	${PYPKGPREFIX}-chardet-[0-9]*:../../converters/py-chardet
+# Technically asciidoc is a dependency of py-markups, but we can't cleanly
+# enable it there.
+DEPENDS+=	asciidoc-[0-9]*:../../textproc/asciidoc
 DEPENDS+=	${PYPKGPREFIX}-enchant-[0-9]*:../../textproc/py-enchant
 DEPENDS+=	${PYPKGPREFIX}-markups-[0-9]*:../../textproc/py-markups
 DEPENDS+=	${PYPKGPREFIX}-qt6-[0-9]*:../../x11/py-qt6
@@ -27,8 +31,6 @@ INSTALLATION_DIRS+=	share/applications
 .include "../../mk/bsd.prefs.mk"
 
 post-install:
-# Upstream egg to wheel definition lost the installation of the desktop file.
-	${INSTALL_DATA} ${WRKSRC}/data/me.mitya57.ReText.desktop ${DESTDIR}${PREFIX}/share/applications/
 # Workaround for PR#57445/50277 for netbsd-9 & netbsd-10 pre 2023-08-05.
 .if ${OPSYS} == "NetBSD"
 	${MV} ${DESTDIR}${PREFIX}/bin/retext ${DESTDIR}${PREFIX}/bin/retext-py
