--- a/databases/php-mongodb/Makefile
+++ b/databases/php-mongodb/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2025/01/26 16:58:38 taca Exp $
+# $NetBSD: Makefile,v 1.26 2025/01/28 09:03:17 riastradh Exp $
 
 MODNAME=	mongodb
 PECL_VERSION=	1.20.1
@@ -9,7 +9,7 @@ HOMEPAGE=	http://docs.mongodb.org/ecosystem/drivers/php/
 COMMENT=	MongoDB database driver
 LICENSE=	apache-2.0
 
-PHP_VERSIONS_ACCEPTED=74 80 81 82
+PHP_VERSIONS_ACCEPTED=74 81 82
 
 USE_TOOLS+=		pkg-config gmake
 # To use system mongodb library, we require libmongocrypt package.
